I believe I fixed the images to go to the relative path, should be visible on netlify. got rid of hamburger navbar and just have a navbar that changes order for tablet

--- a/code/style.css
+++ b/code/style.css
@@ -11,7 +11,7 @@ body {
 .title-header {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  justify-items: center;
   padding: 1rem;
   gap: 2rem;
 }
@@ -29,150 +29,20 @@ body {
   padding: 15px;
   border: 10px;
   margin: 0;
-  justify-self: center;
-}
-
-.container {
-  max-width: 1050px;
-  width: 90%;
-  margin: auto;
-}
-
-.navbar {
-  width: 100%;
-  box-shadow: 0 1px 4px rgb(146 161 176 / 15%);
   display: flex;
 }
 
-.nav-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 62px;
+.navigation {
+  background-color: azure;
+  overflow: hidden;
 }
 
-.navbar .menu-items {
-  display: flex;
-}
-
-.navbar .nav-container li {
-  list-style: none;
-}
-
-.navbar .nav-container a {
-  text-decoration: none;
-  color: #0e2431;
-  font-weight: 500;
-  font-size: 1.2rem;
-  padding: 0.7rem;
-}
-
-.navbar .nav-container a:hover{
-    font-weight: bolder;
-}
-
-.nav-container {
-  display: block;
-  position: relative;
-  height: 60px;
-}
-
-.nav-container .checkbox {
-  position: absolute;
-  display: block;
-  height: 32px;
-  width: 32px;
-  top: 20px;
-  left: 20px;
-  z-index: 5;
-  opacity: 0;
-  cursor: pointer;
-}
-
-.nav-container .hamburger-lines {
-  display: block;
-  height: 26px;
-  width: 32px;
-  position: absolute;
-  top: 17px;
-  left: 20px;
-  z-index: 2;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.nav-container .hamburger-lines .line {
-  display: block;
-  height: 4px;
-  width: 100%;
-  border-radius: 10px;
-  background: #0e2431;
-}
-
-.nav-container .hamburger-lines .line1 {
-  transform-origin: 0% 0%;
-  transition: transform 0.4s ease-in-out;
-}
-
-.nav-container .hamburger-lines .line2 {
-  transition: transform 0.2s ease-in-out;
-}
-
-.nav-container .hamburger-lines .line3 {
-  transform-origin: 0% 100%;
-  transition: transform 0.4s ease-in-out;
-}
-
-.navbar .menu-items {
-  padding-top: 120px;
-  box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
-  height: 100vh;
-  width: 100%;
-  transform: translate(150%);
-  display: flex;
-  flex-direction: column;
-  margin-left: -40px;
-  padding-left: 50px;
-  transition: transform 0.5s ease-in-out;
+.navigation a {
+  float: left;
+  color: darkgoldenrod;
   text-align: center;
+  padding: 10px;
 }
-
-.navbar .menu-items li {
-  margin-bottom: 1.2rem;
-  font-size: 1.5rem;
-  font-weight: 500;
-}
-
-.logo {
-  position: absolute;
-  top: 5px;
-  right: 15px;
-  font-size: 1.2rem;
-  color: #0e2431;
-}
-
-.nav-container input[type="checkbox"]:checked ~ .menu-items {
-  transform: translateX(0);
-}
-
-.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
-  transform: rotate(45deg);
-}
-
-.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
-  transform: scaleY(0);
-}
-
-.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
-  transform: rotate(-45deg);
-}
-
-.nav-container input[type="checkbox"]:checked ~ .logo{
-  display: none;
-}
- 
-
 
 
 
@@ -242,19 +112,13 @@ body {
   background: lightseagreen ;
 }
   
-  .navbar {
-    display: flex;
-    flex-direction: row;
+ .title {
+  order: 3;
+ }
 
-  }
-
-  .menu-items {
-    display: block
-  }
-
-  .hamburger-lines {
-    display: none;
-  }
+ .navigation {
+  order: 4;
+ }
 
   .small-news {
     grid-template-columns: repeat(2, 2fr);
@@ -272,19 +136,8 @@ body {
   background: lightgreen;
  }
  
-.navbar {
-  display: flex;
-  flex-direction: row;
-}
 
-  .menu-items {
-    display: block
-  }
 
-  .hamburger-lines {
-    display: none;
-  }
-  
   .small-news {
     grid-template-columns: repeat(4, 2fr);
     align-items: center;
